# igra-foundry-sdk

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
configs/: foundry.mainnet.toml  foundry.testnet.toml
crates/igra/: Cargo.toml
crates/igra/src/: config.rs  errors.rs  keys.rs  lib.rs  payload.rs  store.rs  submitter.rs  transport.rs
docs/: configuration.md  getting-started.md  limitations.md
examples/deploy-suite/: foundry.toml
examples/deploy-suite/script/: Deploy.s.sol
examples/deploy-suite/src/: Auction.sol  Counter.sol  DEX.sol  MultiSig.sol  NFT.sol  OZGovernor.sol  OZToken.sol  Proxy.sol  SimpleToken.sol  Staking.sol  Vault.sol
igraup/: igraup  install
patches/: 0001-fix-igra-rpc-url-and-evm-signer-fallback.patch
